# blutext

./: .gitignore  README.md  meson.build  non_utf8_test.txt  org.menenggala.blutext.json
data/: meson.build  org.menenggala.blutext.desktop.in  org.menenggala.blutext.gschema.xml  org.menenggala.blutext.metainfo.xml.in  org.menenggala.blutext.service.in
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: blutext-application.c  blutext-application.h  blutext-window.blp  blutext-window.c  blutext-window.h  blutext.gresource.xml  main.c  meson.build
src/gtk/: help-overlay.blp
